# quantities-gui

./: quantities-gui.cabal
src/: quantities-gui.hs  quantities-gui.qml
test-suite/: HLint.hs
