name:                 quantities-gui
version:              0.3.0
author:               John David Reaver <jdreaver@adlerhorst.com>
maintainer:           John David Reaver <jdreaver@adlerhorst.com>
build-type:           Simple
cabal-version:        >= 1.18
copyright:            2014 John David Reaver
license:              BSD3
license-file:         LICENSE
synopsis:             GUI  for quantities, a unit conversion and manipulation
                      library.
description:          GUI  for quantities, a unit conversion and manipulation
                      library.

category:             Data, Math, Physics
homepage:             http://github.com/jdreaver/quantities
extra-source-files:   CHANGES.md

executable quantities-gui
    default-language: Haskell2010
    Hs-Source-Dirs:   src/
    Main-Is:          quantities-gui.hs
    ghc-options:      -threaded
    build-depends:    base >=4 && < 5
                    , quantities >= 0.3.0
                    , containers
                    , text
                    , mtl
                    , parsec
                    , hsqml
    Buildable:        True


test-suite hlint
    build-depends:    base, hlint
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          HLint.hs
    type:             exitcode-stdio-1.0